--- a/report/AIML425_project.tex
+++ b/report/AIML425_project.tex
@@ -234,6 +234,12 @@ Freezing the early layers during fine-tuning strikes a balance between leveragin
 \section{CONCLUSION}
 \label{sec:conclusion}
 
+RetinaFace, an adaptation of the foundational RetinaNet architecture, has ushered in a new era of face detection. By leveraging the strengths of the Feature Pyramid Network (FPN) and integrating specialized components like the context module, RetinaFace offers a robust solution for detecting faces in diverse scenarios. The model's adaptability is further highlighted by its applications across various domains, from cattle identification to contemporary challenges like masked face detection.
+
+Moreover, the potential for fine-tuning, whether through hyper-parameter adjustments or freezing early layers, allows RetinaFace to be tailored to specific datasets or applications. This balance between leveraging pre-existing knowledge and adapting to new data nuances underscores the model's versatility.
+
+In essence, RetinaFace stands as a significant advancement in face detection, combining speed with accuracy. As the field continues to evolve, models like RetinaFace will undoubtedly serve as benchmarks, guiding future innovations in object detection.
+
 
 \section{STATEMENT OF ALL TOOLS USED}
 \label{sec:statementofalltoolsused}
