--- a/report/AIML425_project.tex
+++ b/report/AIML425_project.tex
@@ -29,15 +29,17 @@
 \section{Introduction}
 \label{sec:intro}
 
-Face Detection is a very popular research topic and have various applications in industry.
-Nerual Network plays key role in this work, lots of Face Detection Nerual Networks has been introduced.
-RetinaFace is one of most populars implementation, which is been introduced in 2019, 
-and be accepted by "Conference on Computer Vision and Pattern Recognition (CVPR)" in 2020.
-In this study, I will show my understanding of this work based on this paper "RetinaFace: Single-shot Multi-level Face Localisation in the Wild" \cite{deng2020retinaface}
-In real world, lots of edge case can not be covered by this pretrained model.
-Retrain whole model cost too much.
-Fine tuning model approach will be introduced in this study.
-
+Face Detection stands at the forefront of research, given its myriad applications across various industries. 
+The advent of Neural Networks has revolutionized this domain, leading to the development of numerous sophisticated face detection algorithms. 
+Among these, RetinaFace has emerged as a notable contender. 
+Introduced in 2019 and subsequently accepted by the esteemed "Conference on Computer Vision and Pattern Recognition (CVPR)" in 2020, 
+RetinaFace has garnered significant attention. 
+This study delves into the intricacies of RetinaFace, 
+drawing insights from the paper "RetinaFace: Single-shot Multi-level Face Localisation in the Wild" \cite{deng2020retinaface}. 
+While the pretrained model of RetinaFace exhibits commendable performance, it's not without its limitations, 
+especially when confronted with real-world edge cases. 
+Retraining the entire model can be resource-intensive, prompting the exploration of fine-tuning as a viable alternative. 
+This study aims to shed light on the fine-tuning approach, offering a pathway to optimize the model for specific applications.
 
 \section{Content Analysis}
 \label{sec:content}
