--- a/report/refs.bib
+++ b/report/refs.bib
@@ -59,3 +59,30 @@
   year={2022},
   organization={IEEE}
 }
+
+@inproceedings{wang2019carafe,
+  title={Carafe: Content-aware reassembly of features},
+  author={Wang, Jiaqi and Chen, Kai and Xu, Rui and Liu, Ziwei and Loy, Chen Change and Lin, Dahua},
+  booktitle={Proceedings of the IEEE/CVF international conference on computer vision},
+  pages={3007--3016},
+  year={2019}
+}
+
+@article{yan2019iou,
+  title={IoU-adaptive deformable R-CNN: Make full use of IoU for multi-class object detection in remote sensing imagery},
+  author={Yan, Jiangqiao and Wang, Hongqi and Yan, Menglong and Diao, Wenhui and Sun, Xian and Li, Hao},
+  journal={Remote Sensing},
+  volume={11},
+  number={3},
+  pages={286},
+  year={2019},
+  publisher={MDPI}
+}
+
+@article{vo2022review,
+  title={A review on anchor assignment and sampling heuristics in deep learning-based object detection},
+  author={Vo, Xuan-Thuy and Jo, Kang-Hyun},
+  journal={Neurocomputing},
+  year={2022},
+  publisher={Elsevier}
+}
