--- a/report/AIML425_project.tex
+++ b/report/AIML425_project.tex
@@ -161,6 +161,12 @@ RetinaFace's adaptability shines in its applications across diverse scenarios. A
 \subsection{Optimization for Real-time Applications}
 Real-time face detection's importance, especially in constrained environments, has led to RetinaFace's optimization endeavors. \cite{putro2022faster}'s "A Faster Real-time Face Detector Support Smart Digital Advertising on Low-cost Computing Device" accentuates the model's significance in digital advertising on budget devices, underscoring its real-world applicability.
 
+\subsection{Open-source Availability}
+
+The generous decision by the authors to open-source both their code and models has had profound repercussions in the wider research landscape. By granting unrestricted access to their pioneering work, they inadvertently expedited the adoption rate and catalyzed a spate of research endeavors stemming from their foundational model.
+
+This open-source ethos has not only democratized research access but also nurtured a spirit of collaboration within the research community. Researchers, both seasoned and nascent, have been able to dissect, understand, and build upon RetinaFace's intricacies. Consequently, this has led to the emergence of improved iterations, diverse applications, and enriched adaptations of the model. Such a communal approach has substantially bridged knowledge gaps and expedited advancements in face detection research.
+
 \section{Fine tuning pretrained model}
 
 Fine-tuning a pretrained face detection model involves adapting a model that has been trained on a large dataset to a new, typically smaller, dataset. 
