--- a/report/AIML425_project.tex
+++ b/report/AIML425_project.tex
@@ -169,9 +169,7 @@ This open-source ethos has not only democratized research access but also nurtur
 
 \section{Fine tuning pretrained model}
 
-Fine-tuning a pretrained face detection model involves adapting a model that has been trained on a large dataset to a new, typically smaller, dataset. 
-This can be useful when we have a specific dataset or use-case in mind that might differ from the original training data. 
-
+Fine-tuning a pretrained face detection model entails tailoring a model—originally trained on a vast dataset—to accommodate a newer, often smaller, dataset. This approach becomes invaluable when confronted with a specialized dataset or application that deviates from the initial training context. In real-world scenarios, a pretrained model may struggle to encompass all possible environments. Challenges such as varied camera angles or distinct environmental conditions, like fog, further underscore the necessity for such fine-tuning.
 \subsection{Fine-tuning with Frozen Early Layers}
 
 Fine-tuning pretrained models on novel datasets is a prevalent strategy in deep learning, offering a balance between leveraging pre-existing knowledge and adapting to new data. A common approach during this process is to freeze the early layers of the model, allowing only the deeper layers to be updated. This section delves into the rationale behind this approach and its implications for model performance.
